hdf5-derive/tests/compile-fail/struct-no-repr.stderr
error: proc-macro derive panicked
 --> $DIR/struct-no-repr.rs:4:10
  |
4 | #[derive(H5Type)]
  |          ^^^^^^
  |
  = help: message: H5Type requires repr(C), repr(packed) or repr(transparent) for structs
